--- a/devices/bcm27xx_bcm2712/.config
+++ b/devices/bcm27xx_bcm2712/.config
@@ -13,3 +13,4 @@ CONFIG_PACKAGE_kmod-pcie_mhi=m
 CONFIG_PACKAGE_kmod-codec-bcm2835=n
 CONFIG_PACKAGE_kmod-isp-bcm2835=n
 
+CONFIG_PACKAGE_kmod-rtl8812au-ct=n
