--- a/devices/sunxi_cortexa53/.config
+++ b/devices/sunxi_cortexa53/.config
@@ -11,6 +11,8 @@ CONFIG_TARGET_DEVICE_sunxi_cortexa53_DEVICE_xunlong_orangepi-zero-plus=y
 CONFIG_TARGET_DEVICE_sunxi_cortexa53_DEVICE_xunlong_orangepi-zero2=y
 CONFIG_TARGET_DEVICE_sunxi_cortexa53_DEVICE_xunlong_orangepi-zero3=y
 
+CONFIG_PACKAGE_kmod-rtl8812au-ct=n
+
 CONFIG_PACKAGE_luci-ssl=y # uhttpd服务
 
 
